# wallet-rs

./: .gitignore  Cargo.toml  wallet.json
src/: eth_wallet.rs  main.rs  state.rs
