[package]
name = "wallet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
anyhow = "1.0"
web3 = "0.18.0"
serde_json = "1.0.89"
tiny-keccak = "2.0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
